--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [build-system]
-requires = ["flit_core >=3.2,<4, furo"]
+requires = ["flit_core >=3.2,<4]
 build-backend = "flit_core.buildapi"
 
 [project]
 name = "lumache"
 authors = [{name = "Graziella", email = "graziella@lumache"}]
 dynamic = ["version", "description"]
+
+[project.entry-points]
+"sphinx.html_themes" = {furo = "furo"}
